--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+input, textarea {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
